--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 .env
 .idea/
 storage/
+_ide_helper.php
+.phpstorm.meta.php
+lumen_ide_helper.php
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
