--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.9"
     },
     "dependencies": {
-        "laravel-mix-tailwind": "^0.1.0"
+        "laravel-mix-tailwind": "^0.1.0",
+        "vue-js-modal": "^1.3.28"
     }
 }
